refactor: change website focus

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kliakhandler Aleksandr - Java Backend Developer</title>
+    <title>Aleksandr Kliakhandler - Senior Java Developer, Architect</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,8 +13,8 @@
     <div class="container">
         <header class="header">
             <div class="header-main">
-                <h1 class="name">Kliakhandler Aleksandr</h1>
-                <p class="tagline">Java Backend Developer with experience in both development and team leading.</p>
+                <h1 class="name">Aleksandr Kliakhandler</h1>
+                <p class="tagline">Senior Java Developer, Architect. Custom Software Development & SaaS Solutions.</p>
             </div>
             <div class="contact-info">
                 <a href="mailto:kliakhandler.aleksandr@gmail.com">kliakhandler.aleksandr@gmail.com</a>
@@ -156,9 +156,9 @@
             </section>
 
             <section id="cta" class="card">
-                <h2>Interested in my services?</h2>
+                <h2>Custom Software Development & SaaS Solutions</h2>
                 <p>I'm available for freelance opportunities and consulting. Let's build something great together.</p>
-                <a href="mailto:kliakhandler.aleksandr@gmail.com" class="cta-button">Contact Me & Buy My Services</a>
+                <a href="mailto:kliakhandler.aleksandr@gmail.com" class="cta-button">Let's discuss your project</a>
             </section>
         </main>
 
