feat: add introductory section

--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
         </header>
 
         <main>
+            <section id="introduction" class="card">
+                <h2>About Me</h2>
+                <p>With over a decade of experience in software development, I specialize in crafting robust and scalable backend solutions. My career journey has taken me through diverse and demanding environments, including leading financial institutions (banks) and innovative medical technology startups.</p>
+                <p>I excel at transforming complex business requirements into elegant technical architectures, often designing and implementing solutions from the ground up. My expertise spans the entire software development lifecycle, from initial concept and design to deployment and optimization, with a strong focus on Java-based ecosystems and cloud-native applications.</p>
+            </section>
+
             <section id="experience" class="card">
                 <h2>Experience</h2>
                 <div class="timeline">
